updated depth proof, added battlecode 2023

--- a/index.html
+++ b/index.html
@@ -370,12 +370,13 @@
                         calculate an optimal scaling factor to multiply to the relative MiDaS depth map to give an
                         accurate depth map of the image, which
                         can then be queried at any pixel. Feel free to look at the slides linked above for a full
-                        explanation and proof of optimality for our scaling factor! <br><br>
+                        explanation and <a class="text" href="depth_proof.pdf">proof of optimality for our scaling
+                            factor!<a></a> <br><br>
 
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/sjX_GxfMVb0"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/sjX_GxfMVb0"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen></iframe>
 
                 </p></strong>
 
@@ -405,7 +406,16 @@
                         getting flown out to MIT for cash prizes. We were lucky enough to be
                         in the top 16 for the past two years. Last year we went to MIT to watch the final competition.
                 </p></strong>
-
+                <h2> 2023 Overview</h2>
+                <p><strong>[<a class="text" href="https://github.com/maxwelljones14/BattleCode2023">Full Code</a>] | [<a
+                            class="text" href="BattleCode2023.pdf">Full Post Mortem</a>]</strong></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/oa4CAizd1Nk?start=8810"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <p><strong>This year, we wored really hard to make a post mortem that is both easy to read and
+                        informative for any level of reader. Please feel free to give it a skim/read some paragraphs
+                        that are of most interest!</strong></p>
                 <h2>2022 Overview </h2>
                 <p><strong>[<a class="text" href="https://github.com/BSreenivas0713/Battlecode2022">Full Code</a>] | [<a
                             class="text" href="BattleCode2022.pdf">Full Post Mortem</a>]</strong></p>
