--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
-                <p><strong>This year, we wored really hard to make a post mortem that is both easy to read and
+                <p><strong>This year, we worked really hard to make a post mortem that is both easy to read and
                         informative for any level of reader. Please feel free to give it a skim/read some paragraphs
                         that are of most interest!</strong></p>
                 <h2>2022 Overview </h2>
