--- a/index.html
+++ b/index.html
@@ -415,7 +415,8 @@
                     allowfullscreen></iframe>
                 <p><strong>This year, we worked really hard to make a post mortem that is both easy to read and
                         informative for any level of reader. Please feel free to give it a skim/read some paragraphs
-                        that are of most interest!</strong></p>
+                        that are of most interest (the table of contents has links to each section, so you can just
+                        click on a section to go there)!</strong></p>
                 <h2>2022 Overview </h2>
                 <p><strong>[<a class="text" href="https://github.com/BSreenivas0713/Battlecode2022">Full Code</a>] | [<a
                             class="text" href="BattleCode2022.pdf">Full Post Mortem</a>]</strong></p>
