--- a/index.html
+++ b/index.html
@@ -115,6 +115,20 @@
                             <td class="col-md-3"> NeurIPS 2022</td>
 
                         </tr>
+                        <tr>
+                            <td class="col-md-3"><img class="img-fluid" alt="laptop"
+                                    src="images/Convergence_both.png" style="width:250px;vertical-align:top;">
+                            </td>
+                            <td class="col-md-3"><strong>Efficiently Learning the Graph for Semi-supervised Learning</strong><br>
+                                <a class="text" href="https://scholar.google.com/citations?user=N1q-egYAAAAJ&hl=en&oi=ao"
+                                    style="font-size: 15px;">Dravyansh Sharma</a>, <strong style="font-size: 15px;">Maxwell Jones</strong>
+                                <br> <strong><a class="text" href="https://arxiv.org/abs/2306.07098"
+                                        style="font-size: 15px;">[paper]</a> <a class="text" style="font-size: 15px;"
+                                        href="https://github.com/maxwelljones14/Efficient-SSL">[code]</a></strong>
+                            </td>
+                            <td class="col-md-3"> UAI 2023</td>
+
+                        </tr>
 
                         <td><strong style="font-size:40pt;">Experience</strong></td>
                         </tr>
