--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     style="margin-top: 1px;margin-right: 10px;position:absolute;top:5px;left:15px;border-bottom:none;font-size:75px;">&laquo;</a>
                 <h3 style="font-size:20px;"><b>Partner</b>: <a class="text"
                         href="https://www.linkedin.com/in/arburra/">Akshath Burra</a></h3>
-                <p><br><strong>my Senior year I took <a class="text"
+                <p><br><strong>My senior year I took <a class="text"
                             href="http://www.cs.cmu.edu/afs/cs.cmu.edu/academic/class/15494-s23/">Cognitive
                             Robotics</a>, a course in which you program <a class="text"
                             href="https://www.digitaldreamlabs.com/products/cozmo-robot">Cozmo</a>, a robot with a
