updated battle code section

--- a/index.html
+++ b/index.html
@@ -415,11 +415,11 @@
                         100s of teams and thousands of participants entering code. As a general overview, games consist
                         of two teams, each with control of some number of robots. These robots have different
                         abilities(making money, attacking, creating more robotos, etc),
-                        and can only communicate through bitFlags whose messages must be coded up in some finite range.
+                        and can only communicate through bitFlags whose messages must be coded up in some finite range. Some strategies for performing well include implementing fast pathfinding to navigate terrain with different levels of movement allowed per square, clustering troops to place them strategically across the map, and using map symmetry to infer the location of the enemy base long before actually exploring the entire map. 
                         <br><br>
                         There are multiple tournaments throughout the month, ending in a tournament for the top 16 teams
                         getting flown out to MIT for cash prizes. We were lucky enough to be
-                        in the top 16 for the past two years. Last year we went to MIT to watch the final competition.
+                        in the top 16 for the past two years, with monotonically decreasing rankings for each year. Our first year, we placed 9th-12th, the best performance out of all first time teams. The next year, we placed 7th-8th, and our final year we placed 3rd. 
                 </p></strong>
                 <h2> 2023 Overview</h2>
                 <p><strong>[<a class="text" href="https://github.com/maxwelljones14/BattleCode2023">Full Code</a>] | [<a
