--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                                     style="font-size: 15px;">Dravyansh Sharma</a>, <strong style="font-size: 15px;">Maxwell Jones</strong>
                                 <br> <strong><a class="text" href="https://arxiv.org/abs/2306.07098"
                                         style="font-size: 15px;">[paper]</a> <a class="text" style="font-size: 15px;"
-                                        href="https://github.com/maxwelljones14/Efficient-SSL">[code]</a></strong>
+                                        href="https://github.com/maxwelljones14/Efficient-SSL">[code]</a> <a class="text" style="font-size: 15px;"
+                                        href="Efficient-SSL-poster.pdf">[poster]</a></strong>
                             </td>
                             <td class="col-md-3"> UAI 2023</td>
 
