--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <p>Masters Student @ <a class="text" href="https://www.cs.cmu.edu/">CMU</a></p>
                     <p>Former AI & Math Double Major @ <a class="text" href="https://www.cs.cmu.edu/">CMU</a></p>
                     <br>
-                    <p style="font-size:20px ;"><strong>I'm currently an <a class="text"
+                    <p style="font-size:20px ;"><strong>I'm currently a <a class="text"
                                 href="https://www.ml.cmu.edu/academics/5th-year-ms.html">CMU
                                 MSML</a> student researching under <a class="text"
                                 href="https://www.cs.cmu.edu/~junyanz/">Jun-Yan Zhu</a> in the Generative Intelligence
