updated main page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 MSML</a> student researching under <a class="text"
                                 href="https://www.cs.cmu.edu/~junyanz/">Jun-Yan Zhu</a> in the Generative Intelligence
                             Lab.
-                            I'm also a head TA for <a class="text"
+                            I'm also a <a class="text" href="https://csd.cmu.edu/news/five-scs-students-named-2024-siebel-scholars#:~:text=Five%20graduate%20students%20in%20Carnegie,as%20part%20of%20the%20program.">Siebel Scholar</a> and head TA for <a class="text"
                                 href="https://www.math.cmu.edu/~jmackey/151_128/welcome.html">15-151</a> Concepts of
                             Mathematics.</strong>
                     <p><br>
