--- a/index.html
+++ b/index.html
@@ -673,7 +673,9 @@
                     <p>mjones2 [at] andrew [dot] cmu [dot] edu</p>
                 </header>
             </article>
-
+    <article id="RainaIsTheBest" class="panel">
+    <p>hi Raina :)</p>
+    </article>
         </div>
 
         <!-- Footer -->
@@ -685,7 +687,6 @@
                             class="label">Github</span></a></li>
             </ul>
         </div>
-
     </div>
 
     <!-- Scripts -->
