another tiny change

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                 </header>
             </article>
     <article id="RainaIsTheBest" class="panel">
-    <p>hi Raina :))))</p>
+    <p>hi Raina :)))))</p>
     </article>
         </div>
 
